projects/compiler/test/typechecker/return/error_type_mismatch.out
Error at %FILE_NAME%:2:10
Return type mismatch for function 'foo'
  |    return "abcd"
              ^
Expected Bool
but instead found String
