projects/compiler/test/typechecker/return/error_type_mismatch.1.abra
func foo(a: Int, b: String): Bool {
  return "abcd"
}
